[gd_scene load_steps=9 format=3 uid="uid://t776op5xvn6b"]

[ext_resource type="Theme" uid="uid://dt64wf3jwua3u" path="res://themes/desktop.tres" id="1_7ppw4"]
[ext_resource type="Script" path="res://scripts/window_thread.gd" id="1_jugw2"]
[ext_resource type="StyleBox" uid="uid://cv0wvc6bxjm6k" path="res://themes/window_background.tres" id="1_v12kp"]
[ext_resource type="StyleBox" uid="uid://c1haftvkjic0v" path="res://themes/window_border.tres" id="3_vqyr0"]
[ext_resource type="StyleBox" uid="uid://d2y7jeuwoiqjr" path="res://themes/window_panel.tres" id="4_4pauq"]
[ext_resource type="StyleBox" uid="uid://dr76horeq7hiw" path="res://themes/window_border_button.tres" id="5_8ogmj"]

[sub_resource type="Animation" id="Animation_8fnco"]
resource_name = "load_thread"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ProgressBar:value")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(-0.406127, 1),
"update": 0,
"values": [0.0, 100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ProgressBar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/ScrollContainer/message_list:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6euko"]
_data = {
"load_thread": SubResource("Animation_8fnco")
}

[node name="window_thread" type="Panel" groups=["thread"]]
offset_right = 868.0
offset_bottom = 413.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
theme = ExtResource("1_7ppw4")
theme_override_styles/panel = ExtResource("1_v12kp")
script = ExtResource("1_jugw2")
background_color = Color(0.898039, 0.368627, 0, 1)

[node name="border" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("3_vqyr0")

[node name="window_title" type="Label" parent="border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "MESSAGE HISTORY"
vertical_alignment = 1

[node name="close_window_button" type="Button" parent="border"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -10.0
offset_right = -5.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("5_8ogmj")
theme_override_styles/hover = ExtResource("5_8ogmj")
theme_override_styles/pressed = ExtResource("5_8ogmj")
theme_override_styles/disabled = ExtResource("5_8ogmj")
theme_override_styles/focus = ExtResource("5_8ogmj")
text = "â…©"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("4_4pauq")

[node name="message_list" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 2
offset_left = 30.0
offset_top = 198.5
offset_right = 838.0
offset_bottom = 214.5
grow_horizontal = 2
grow_vertical = 2
step = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6euko")
}

[connection signal="pressed" from="border/close_window_button" to="." method="_on_close_window_button_pressed"]
